# local-servio

./: .gitignore  LICENSE  README.md  app.py  processor.py  pyproject.toml
static/: .gitkeep
templates/: index.html  markdown.html  media.html
